--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -93,7 +93,7 @@ emu_theses <-
 pdf_paths <- here(data_path, emu_theses$file_name)
 ```
 
-Desccription of text extraction; raw data avilable on 4TU.ResearchData at...
+Description of text extraction; raw data available on 4TU.ResearchData at...
 
 ```{r extract-pdf-text}
 #| echo: false
