--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -311,11 +311,11 @@ get_top_words_per_corpus(data = emu_theses_words, top_n = n) |>
 #| label: ngrams
 
 ## Bigrams
-emu_theses_bigrams <- emu_theses |> 
+emu_bigrams <- emu_theses |> 
   get_ngrams(n = 2, title_col = "title", text_col = "text_clean", stem = TRUE)
 
-spacyr::spacy_parse(emu_theses_bigrams$w_1)
-data.frame(emu_theses_bigrams$w_1, textstem::lemmatize_words(emu_theses_bigrams$w_1))
+spacyr::spacy_parse(emu_bigrams$w_1)
+data.frame(emu_bigrams$w_1, textstem::lemmatize_words(emu_bigrams$w_1))
 
 
 set.seed(12345)
@@ -328,7 +328,7 @@ extract_rand_window <- function(x, p){
 
 example_lemma <-list()
 for (i in 1:10) {
-  example_lemma[[i]] <- extract_rand_window(emu_theses_bigrams$w_1,10)
+  example_lemma[[i]] <- extract_rand_window(emu_bigrams$w_1,10)
 }
 
 Original <- unlist(example_lemma)
@@ -345,10 +345,10 @@ data.frame(Lemmatized$token, Lemmatized$lemma, Lemmatized2)
 
 
 
-bigram_counts <- emu_theses_bigrams |> 
+bigram_counts <- emu_bigrams |> 
   count(w_1, w_2, sort = TRUE)
 
-bigram_stem_counts <- emu_theses_bigrams |> 
+bigram_stem_counts <- emu_bigrams |> 
   count(w_1_stem, w_2_stem, sort = TRUE)
 
 bigram_counts
@@ -364,7 +364,7 @@ trigram_counts <- emu_theses_trigrams |>
 trigram_counts
 
 ## Bigram tf-idf
-bigram_tf_idf <- emu_theses_bigrams |> 
+bigram_tf_idf <- emu_bigrams |> 
   count(title, ngram) |> 
   bind_tf_idf(ngram, title, n) |> 
   arrange(desc(tf_idf))
@@ -398,7 +398,7 @@ ggraph(bigram_graph, layout = "fr") +
 
 ## Higgh frequency bigrams ----
 
-emu_theses_bigrams_top <- emu_theses_bigrams |>
+emu_bigrams_top <- emu_bigrams |>
   group_by(title) |>
   count(ngram, sort = TRUE) |>
   slice_max(n, n = 20) |>        ### top_n is superseded; better use slice_max instead
@@ -406,13 +406,13 @@ emu_theses_bigrams_top <- emu_theses_bigrams |>
   ungroup() |>
   mutate(bigram = reorder(ngram, n))
 
-emu_theses_bigrams_top_all <- emu_theses_bigrams |>
+emu_bigrams_top_all <- emu_bigrams |>
   count(ngram, sort = TRUE) |>
   slice_max(n, n = 20) |>        ### top_n is superseded; better use slice_max instead
   # filter(n > 50)                ### filter words with a minimum count
   mutate(ngram = reorder(ngram, n))
 
-emu_theses_bigrams_top |>
+emu_bigrams_top |>
   filter(title == unique(title)[1:10]) |> 
   ggplot(aes(x = ngram, y = n, fill = title)) +
   geom_col() +
