--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -83,12 +83,12 @@ all_theses <-
   readxl::read_xlsx(path = here(data_path, "theses-all.xlsx"))
 
 ## Read only metadata for theses with PDF available
-emu_theses <- 
+emu <- 
   read_csv(here(data_path, "theses-metadata.csv")) |>
   mutate(text = "") |>
   filter(!is.na(pdf_via))
 
-pdf_paths <- here(data_path, emu_theses$file_name)
+pdf_paths <- here(data_path, emu$file_name)
 ```
 
 ```{r get-pdf-text}
@@ -99,17 +99,17 @@ data_path <- here("analysis", "data", "derived_data", "emu_theses_with_text_and_
 
 if (!file.exists(data_path)) {
   # On the first run, this function might take extra time as a Python environment needs to be set up
-  emu_theses$text <- convert_pdf_text(pdf_paths)
+  emu$text <- convert_pdf_text(pdf_paths)
   
   # Add latitude and longitude information to theses data frame
-  emu_theses <- geocode_thesis_locations(emu_theses)
+  emu <- geocode_thesis_locations(emu)
 
   # Write thesis dataframe to file
-  write_csv(emu_theses, data_path)
+  write_csv(emu, data_path)
 } else {
-  emu_theses$text <- read_csv(data_path)$text
-  emu_theses$longitude <- read_csv(data_path)$longitude
-  emu_theses$latitude <- read_csv(data_path)$latitude
+  emu$text <- read_csv(data_path)$text
+  emu$longitude <- read_csv(data_path)$longitude
+  emu$latitude <- read_csv(data_path)$latitude
 }
 
 ```
@@ -117,7 +117,7 @@ if (!file.exists(data_path)) {
 ```{r clean-text}
 #| echo: false
 
-emu_theses$text_clean <- emu_theses$text |>
+emu$text_clean <- emu$text |>
   clean_basic() 
   
 ```
@@ -133,7 +133,7 @@ Distinctive features of the program:
 
 
 
-In order to describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: `r nrow(all_theses)` theses with an average of `r mean(str_length(emu_theses$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(all_theses$grad_year, na.rm = TRUE), "-", max(all_theses$grad_year, na.rm = TRUE))`. 
+In order to describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: `r nrow(all_theses)` theses with an average of `r mean(str_length(emu$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(all_theses$grad_year, na.rm = TRUE), "-", max(all_theses$grad_year, na.rm = TRUE))`. 
 
 # Methods
 
@@ -154,7 +154,7 @@ The theses are available in PDF format with complex layouts typical to an urbani
 
 The imported dataset contains the text data in the `text` column and related metadata in the other columns... 
 
-A total number of `r nrow(emu_theses)` out of `r nrow(all_theses)` were analysed.
+A total number of `r nrow(emu)` out of `r nrow(all_theses)` were analysed.
 
 ```{r fig-map-theses}
 #| warning: false 
@@ -162,7 +162,7 @@ A total number of `r nrow(emu_theses)` out of `r nrow(all_theses)` were analysed
 #| fig-cap: "Location of EMU theses included in the analysis"
 
 # Show thesis locations on world map
-visualize_thesis_locations(emu_theses)
+visualize_thesis_locations(emu)
 ```
 
 @fig-map-theses shows the geographic spread of the theses included in the analysis.
@@ -178,14 +178,14 @@ For analyses in which word-level tokens were used, stop words, i.e., common word
 ```{r stop-words}
 
 # Add cleaned text column with removed stop words
-emu_theses$text_clean <- emu_theses$text_clean |>
-  str_remove_all(find_meta_stopwords(emu_theses)) |> 
+emu$text_clean <- emu$text_clean |>
+  str_remove_all(find_meta_stopwords(emu)) |> 
   str_remove_all(urbanism_stopwords(
     add_stopwords = c("emu", "european postgraduate master in urbanism", "tu delft", "ku leuven", "upcs barcelona", "iuav venice"))) |>
   str_remove_all(thesis_stopwords(add_stopwords = c("advisor", "prof")))
 
 # Unnest words and remove words of one and two letters
-emu_theses_words <- emu_theses |> 
+emu_words <- emu |> 
   select(title, text_clean) |> 
   unnest_tokens(output = word, input = text_clean) |>  # remove punctuation, convert to lower-case, separate all words
   anti_join(tidytext::stop_words, by = "word") |>  # remove stop words
@@ -198,9 +198,9 @@ Finally, additional checks were made to the document in search for previously un
 ```{r short-stop-words}
 #| dependson: stop-words
 
-#short_words(emu_theses_words$word, l_word = 3, l_list = 100)
+#short_words(emu_words$word, l_word = 3, l_list = 100)
 
-emu_theses_words <- emu_theses_words |>  
+emu_words <- emu_words |>  
   filter(nchar(word) >= 3)  # keep only words that are at least three letters long
 
 ```
@@ -212,7 +212,7 @@ Similar to clustering on numeric data, topic modeling is a method of unsupervise
 ```{r topic-model-lda}
 
 # Prepare document-term matrix as input for LDA model
-emu_dtm <- convert_to_dtm(emu_theses_words, "title", "word")
+emu_dtm <- convert_to_dtm(emu_words, "title", "word")
 
 # Create LDA model
 emu_lda <- LDA(emu_dtm, k = 2, control = list(seed = 2023))
@@ -227,17 +227,17 @@ emu_lda <- LDA(emu_dtm, k = 2, control = list(seed = 2023))
 emu_topics <- tidy(emu_lda, matrix = "beta")
 
 # The top n most common words in each topic
-emu_theses_top_terms <- get_top_words_per_topic(emu_topics, 20)
+emu_top_terms <- get_top_words_per_topic(emu_topics, 20)
 
 # TODO create visualisation function
-emu_theses_top_terms |> 
+emu_top_terms |> 
   ggplot(aes(reorder(term, beta), beta, fill = factor(topic))) +
   geom_col(show.legend = FALSE) +
   facet_wrap(~ topic, scales = "free") +
   coord_flip()
 
 # TODO can this be generalised to more than two topics?
-beta_spread <- emu_theses_topics |> 
+beta_spread <- emu_topics |> 
   mutate(topic = paste0("topic", topic)) |> 
   spread(topic, beta) |> 
   filter(topic1 > 0.001, topic2 > .001) |> 
@@ -265,7 +265,7 @@ emu_documents |>
   coord_flip()
 
 emu_documents |> 
-  inner_join(emu_theses |> 
+  inner_join(emu |> 
                select(title, graduation_year), 
              by = c("document" = "title")) |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
@@ -274,7 +274,7 @@ emu_documents |>
   facet_wrap(~ graduation_year, ncol = 1, scales = "free", drop = TRUE)
 
 emu_documents |> 
-  inner_join(emu_theses |> 
+  inner_join(emu |> 
                select(title, graduation_year), 
              by = c("document" = "title")) |> 
   ggplot(aes(x = factor(graduation_year), y = topic, fill = factor(topic))) +
@@ -286,7 +286,7 @@ emu_documents |>
 
 ```{r top-words-document}
 # Which are the top n most frequently used words in each thesis?
-get_top_words_per_document(data = emu_theses_words, top_n = 3)
+get_top_words_per_document(data = emu_words, top_n = 3)
 ```
 
 
@@ -295,7 +295,7 @@ get_top_words_per_document(data = emu_theses_words, top_n = 3)
 # Which are the top n most frequently used words in all theses?
 # TODO add `topic` to `fill` aesthetic
 n = 50
-get_top_words_per_corpus(data = emu_theses_words, top_n = n) |>
+get_top_words_per_corpus(data = emu_words, top_n = n) |>
   ggplot(aes(reorder(word, n), n)) +
   geom_col(fill = "orange") +
   geom_text(aes(label = n), size = 2, hjust = 1.1) +
@@ -311,7 +311,7 @@ get_top_words_per_corpus(data = emu_theses_words, top_n = n) |>
 #| label: ngrams
 
 ## Bigrams
-emu_bigrams <- emu_theses |> 
+emu_bigrams <- emu |> 
   get_ngrams(n = 2, title_col = "title", text_col = "text_clean", stem = TRUE)
 
 spacyr::spacy_parse(emu_bigrams$w_1)
@@ -355,10 +355,10 @@ bigram_counts
 bigram_stem_counts
 
 ## Trigrams
-emu_theses_trigrams <- emu_theses |> 
+emu_trigrams <- emu |> 
   get_ngrams(n = 3, title_col = "title", text_col = "text")
 
-trigram_counts <- emu_theses_trigrams |> 
+trigram_counts <- emu_trigrams |> 
   count(w_1, w_2, w_3, sort = TRUE)
 
 trigram_counts
@@ -372,7 +372,7 @@ bigram_tf_idf <- emu_bigrams |>
 bigram_tf_idf
 
 ## Trigram tf-idf
-trigram_tf_idf <- emu_theses_trigrams |> 
+trigram_tf_idf <- emu_trigrams |> 
   count(title, ngram) |> 
   bind_tf_idf(ngram, title, n) |> 
   arrange(desc(tf_idf))
@@ -431,11 +431,11 @@ The `tf-idf` statistic shows words that are the most important to one document i
 ```{r tf-idf}
 
 ## Calculate tf-idf statistic
-emu_theses_tf_idf <- emu_theses_words |> 
+emu_tf_idf <- emu_words |> 
   get_tf_idf(title_col = "title", word_col = "word")
 
 ## Get top n words most specific to each thesis 
-emu_theses_tf_idf |> 
+emu_tf_idf |> 
   group_by(title) |> 
   top_n(5, tf_idf) |> 
   arrange(desc(tf_idf), .by_group = TRUE)
@@ -446,7 +446,7 @@ emu_theses_tf_idf |>
 
 ```{r}
 # Preview term frequency distributions in a subset of theses
-ggplot(emu_theses_words_count |> 
+ggplot(emu_words_count |> 
          filter(title == unique(title)[1:6]),
        aes(n/total, fill = title)) +
   geom_histogram(show.legend = FALSE, binwidth = 0.0001) +
@@ -459,7 +459,7 @@ ggplot(emu_theses_words_count |>
 ```{r}
 # Examine Zipf's law for the EMU theses
 ## Calculate rank and term frequency
-freq_by_rank <- emu_theses_words_count |> 
+freq_by_rank <- emu_words_count |> 
   group_by(title) |> 
   mutate(rank = row_number(),
          `term frequency` = n/total)
@@ -485,7 +485,7 @@ freq_by_rank |>
   scale_y_log10()
 
 ## Visualise the top n words with the highest tf-idf values for each of a subset of theses
-emu_theses_words_count |> 
+emu_words_count |> 
   filter(title == unique(title)[1:6]) |> 
   arrange(desc(tf_idf)) |> 
   mutate(word = factor(word, levels = rev(unique(word)))) |> 
@@ -507,7 +507,7 @@ emu_theses_words_count |>
 #| include: false
 
 # To what extent do words co-occur with other words?
-tidy_pmi <- get_pmi(emu_theses, title_col = "title", text_col = "text_clean")
+tidy_pmi <- get_pmi(emu, title_col = "title", text_col = "text_clean")
 
 ```
 
@@ -547,7 +547,7 @@ visualise_first_n_components(tidy_word_vectors, 24, 12)
 ```{r doc-embeddings}
 
 # Summarise word embeddings into document embeddings for modeling purposes
-word_matrix <- tidy_emu_theses |> 
+word_matrix <- tidy_emu |> 
   count(title, word) |> 
   cast_sparse(title, word, n)
 
