--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -121,15 +121,6 @@ if (!file.exists(data_path)) {
 
 ```
 
-```{r clean-text}
-#| echo: false
-#| dependson: get-pdf-text
-
-emu$text_clean <- emu$text |>
-  clean_basic() 
-  
-```
-
 # Introduction
 
 The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. The EMU was an advanced master ran jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia. <!-- Complete paragraph about the program -->
@@ -183,36 +174,58 @@ Word-level tokenisation was applied with the `unnest_tokens()` function of the `
 
 For analyses in which word-level tokens were used, stop words, i.e., common words or words that do not add much meaning, were removed in the pre-processing stage. Global, subject-specific and document stop words [@hvitfeldt2021a] were differentiated. As all theses were written in English, the pre-made "snowball" lexicon was used to remove global stop words. <!-- We tried to create a custom global stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words, but no significant improvement was observed in the result. --> We manually constructed a list of subject-specific stop words based on our domain knowledge. Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as subject-specific stop words as well. Finally, titles and author names were removed as document stop words. In the next pre-processing step, we normalised the resulting words, that is, reduced them to their canonical dictionary forms, the resulting words were lemmatised [@hvitfeldt2021a]. Lemmatisation was preferred over stemming as the former tends to be more meaningful and less degrading than the latter.
 
-```{r stop-words}
+```{r pre-process-text}
 
-# Add cleaned text column with removed stop words
-emu$text_clean <- emu$text_clean |>
-  str_remove_all(find_meta_stopwords(emu)) |> 
-  str_remove_all(urbanism_stopwords(
-    add_stopwords = c("emu", "european postgraduate master in urbanism", "tu delft", "ku leuven", "upcs barcelona", "iuav venice", 
-                      "space", "spatial", "spaces", "plan", "public", "development"))) |>
-  str_remove_all(thesis_stopwords(add_stopwords = c("advisor", "prof", "fig", "ure", "ning")))
+meta_sw <- find_meta_stopwords(emu)
+urbanism_sw <- urbanism_stopwords(
+    add_stopwords = c("emu", "european postgraduate master in urbanism", 
+                      "european post master in urbanism",
+                      "european postmaster in urbanism",
+                      "tu delft", "ku leuven", "upc barcelona", "iuav venice"))
+thesis_sw <- thesis_stopwords(add_stopwords = c("advisor", "prof", "fig", "ure", "ning"))
+custom_sw <- c("space", "spatial", "spaces", "plan", "public", "development") |>
+  (\(.) paste0("\\b", ., "\\b"))() |> 
+  paste(collapse = "|")
 
-# Unnest words and remove words of one and two letters
+# Add cleaned text column
+emu$text_clean <- emu$text_raw |>
+  # Remove white spaces and punctuation, and change text to lower-case
+  clean_basic() |>
+  # Remove title, subtitle and full title
+  str_remove_all(meta_sw) |> 
+  # Remove dataset-specific words
+  str_remove_all(urbanism_sw) |>
+  # Remove thesis-specific words
+  str_remove_all(thesis_sw)
+
+# Concatenate ngrams
+emu$text_clean <- emu |> 
+  c_ngrams(n_max = 3, text_col = "text_clean",
+           title_col = "title", min_freq = 20, lemma = TRUE) 
+  
+  # Words that were not included in ngrams are safe to remove now
+emu$text_clean <- emu$text_clean |> 
+  str_remove_all(custom_sw)
+
+```
+
+
+
+```{r tokenise}
+
+# TODO Replace title column with ID column
+
+# Unnest tokens and remove words of one and two letters
 emu_words <- emu |> 
   select(title, text_clean) |> 
   unnest_tokens(output = word, input = text_clean) |>  # remove punctuation, convert to lower-case, separate all words
   anti_join(tidytext::stop_words, by = "word") |>  # remove stop words
-  mutate(word = textstem::lemmatize_words(word))  # lemmatise words
+  mutate(word = textstem::lemmatize_words(word)) |>  # lemmatise words
+  filter(nchar(word) >= 3)  # keep only words that are at least three letters long
 
 ```
 
 Finally, additional checks were made to the document in search for previously undetected stop words. Short words of one and two letters could be safely removed, while three-letter words were kept, as many of those, including "map" and "low", were meaningful and occurring in high frequency.
-
-```{r short-stop-words}
-#| dependson: stop-words
-
-#short_words(emu_words$word, l_word = 3, l_list = 100)
-
-emu_words <- emu_words |>  
-  filter(nchar(word) >= 3)  # keep only words that are at least three letters long
-
-```
 
 ### Topic model
 
@@ -221,12 +234,11 @@ Similar to clustering on numeric data, topic modeling is a method of unsupervise
 The number of topics was qualitatively determined
 
 ```{r topic-model-lda-1}
-#| dependson: short-stop-words
 
 # Prepare document-term matrix as input for LDA model
 
 # Reduce the size of the DTM by excluding words with a frequency lower than 5
-emu_dtm <- convert_to_dtm(emu_theses_words, 
+emu_dtm <- convert_to_dtm(emu_words, 
                           title_col = "title", 
                           word_col = "word", 
                           min_term_freq = 5)
@@ -449,54 +461,7 @@ get_top_words_per_corpus(data = emu_words, top_n = n) |>
   theme(panel.grid = element_blank())
 ```
 
-```{r bigrams}
-
-emu_bigrams <- emu |> 
-  get_ngrams(n = 2, title_col = "title", text_col = "text_clean", lemma = TRUE) |> 
-  unite(ngram_lemma, w_1_lemma, w_2_lemma, sep = " ", remove = FALSE)
-  
-bigram_counts <- emu_bigrams |> 
-  count(ngram, sort = TRUE) |> 
-  filter(n > 20)
-
-emu_bigrams <- emu_bigrams |> 
-  filter(ngram %in% bigram_counts$ngram)
-
-bigram_lemma_counts <- emu_bigrams |> 
-  count(w_1_lemma, w_2_lemma, sort = TRUE) |> 
-  filter(n > 5)
-
-# Concatenate bigrams
-
-# # First attempt using a named vector in `str_replace_all()`
-c_bigrams <- paste(emu_bigrams$ngram_lemma, sep = "_")
-names(c_bigrams) <- emu_bigrams$ngram
-
-system.time(
-  emu$text_clean <- emu$text_clean |>
-    str_replace_all(fixed(c_bigrams))
-)
-
-# Second attempt with `mgsub::mgsub()`
-# emu$text_clean <- mgsub(emu$text_clean,
-#                         pattern = emu_bigrams$ngram,
-#                         replacement = emu_bigrams$ngram_lemma)
-
-```
-
-```{r trigrams}
-
-## Trigrams
-emu_trigrams <- emu |> 
-  get_ngrams(n = 3, title_col = "title", text_col = "text_clean", lemma = TRUE)
-
-trigram_counts <- emu_trigrams |> 
-  count(w_1, w_2, w_3, sort = TRUE)
-
-trigram_lemma_counts <- emu_trigrams |> 
-  count(w_1_lemma, w_2_lemma, w_3_lemma, sort = TRUE)
-
-```
+A frequency count of ngrams reveals collocations like "public space" or "socio-spatial segregation" across the corpus. To include these in the topic model, we concatenated them with an underscore, so that they are considered one word during the word-level tokenisation. Only bigrams and trigrams, that is two- and three-word collocations, were extracted from the corpus.
 
 ```{r bigram-tfidf}
 ## Bigram tf-idf
