--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -71,30 +71,25 @@ for (package in packages) {
   library(package, character.only = TRUE)
 }
 
-
 # Load analysis functions ----
 devtools::load_all(".")
-
-
 
 ```
 
 Description of text extraction; raw data available on 4TU.ResearchData at...
 
-```{r get-pdf-text}
+```{r load-data}
 #| echo: false
-#| cache: true
 #| message: false
 
-# Read thesis metadata ----
+# Read thesis metadata
 data(emu_metadata)
 
-# Load the raw text dataset 
+# Load raw text data
 data(emu_raw) 
 
-# Join  text with the metadata file  
+# Join text with the metadata file  
 emu <- left_join(emu_raw, emu_metadata, by = "ID")
-
 
 ```
 
