Add new references used in the paper

--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -34,3 +34,68 @@
 	address = {Beijing ; Boston},
 	langid = {English}
 }
+
+@article{blei2012,
+	title = {Probabilistic topic models},
+	author = {Blei, David M.},
+	year = {2012},
+	month = {04},
+	date = {2012-04-01},
+	journal = {Communications of the ACM},
+	pages = {77{\textendash}84},
+	volume = {55},
+	number = {4},
+	doi = {10.1145/2133806.2133826},
+	url = {https://doi.org/10.1145/2133806.2133826}
+}
+
+@article{blei2003,
+	title = {Latent dirichlet allocation},
+	author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+	year = {2003},
+	month = {03},
+	date = {2003-03-01},
+	journal = {The Journal of Machine Learning Research},
+	pages = {993{\textendash}1022},
+	volume = {3},
+	number = {null}
+}
+
+@article{muchene2021,
+	title = {Two-stage topic modelling of scientific publications: A case study of University of Nairobi, Kenya},
+	author = {Muchene, Leacky and Safari, Wende},
+	year = {2021},
+	month = {01},
+	date = {2021-01-07},
+	journal = {PLOS ONE},
+	pages = {e0243208},
+	volume = {16},
+	number = {1},
+	doi = {10.1371/journal.pone.0243208},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0243208},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@techreport{rcoreteam2023,
+	title = {R: A language and environment for statistical computing},
+	author = {R Core Team, },
+	year = {2023},
+	date = {2023},
+	url = {https://www.R-project.org/},
+	address = {Vienna, Austria}
+}
+
+@article{grün2011,
+	title = {topicmodels: An R Package for Fitting Topic Models},
+	author = {{Grün}, Bettina and Hornik, Kurt},
+	year = {2011},
+	month = {05},
+	date = {2011-05-09},
+	journal = {Journal of Statistical Software},
+	pages = {1--30},
+	volume = {40},
+	doi = {10.18637/jss.v040.i13},
+	url = {https://doi.org/10.18637/jss.v040.i13},
+	langid = {en}
+}
